--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -20,13 +20,13 @@
 			<div class="unit-inner unit-head-inner">
 				<p class="logo"><a href="{{ HOME_PATH }}">{{ site.title }}</a></p>
 				<nav class="nav-global">
-				  你越珍惜生命，你就越觉得生命宝贵。
-					<!-- <ul> -->
+					<ul>
+					  <li class="archive">你越珍惜生命，你就越觉得生命宝贵。</li>
 					<!-- 	<li class="archive"><a href="/archive.html">archive</a></li> -->
 					<!-- 	<li class="page"><a href="/pages.html">pages</a></li> -->
 					<!-- 	<li class="category"><a href="/categories.html">categories</a></li> -->
 					<!-- 	<li class="tag"><a href="/tags.html">tags</a></li> -->
-					<!-- </ul> -->
+					</ul>
 				</nav>
 			</div><!-- unit-inner -->
 		</div><!-- unit-head -->
