Add new content

--- a/_includes/themes/the-minimum/page.html
+++ b/_includes/themes/the-minimum/page.html
@@ -13,6 +13,12 @@
 				<div class="entry-content">
 					{{ content }}
 				</div><!-- entry-content -->
+
+				<div class="my-disqus">
+				  <hr/>
+				  {% include JB/comments %}
+				</div>
+
 			</div><!-- bd -->
 
 			<footer class="unit-foot">
