--- a/assets/themes/the-minimum/css/style.css
+++ b/assets/themes/the-minimum/css/style.css
@@ -851,3 +851,9 @@ pre {
     margin-right: 360px;
   }
 }
+
+.my-disqus {
+    width: 43.125em;
+    margin-left: auto;
+    margin-right: auto;
+}
